CRUD operations implemented

--- a/SqliteDBTesting_.vcxproj.filters
+++ b/SqliteDBTesting_.vcxproj.filters
@@ -18,5 +18,11 @@
     <ClCompile Include="SqliteDBTesting_.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="sqlite3.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
